fix URL for Andrew Freebairn's profile

--- a/_notebooks/2022-05-28-hydstra-rest-data.ipynb
+++ b/_notebooks/2022-05-28-hydstra-rest-data.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Trying to retrieve time series or streamflow measurements via a REST API. Or anything that works for that matter.\n",
     "\n",
-    "This builds on work done by my colleague [Andrew Freebairn](https://github.com/orgs/csiro-hydroinformatics/people/fre171csiro), which really gave me a leg up.\n"
+    "This builds on work done by my colleague [Andrew Freebairn](https://github.com/fre171csiro), which really gave me a leg up.\n"
    ]
   },
   {
