Minor additions to post on lithology

--- a/_notebooks/2022-06-01-lithology-classification-hugging-face.ipynb
+++ b/_notebooks/2022-06-01-lithology-classification-hugging-face.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a151921-a709-42c2-9e3b-898c8973099d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "75eb2741-eac7-4dd9-9f9a-0ccd5695130e",
    "metadata": {},
@@ -57,34 +49,25 @@
     "\n",
     "I am not working on this domain during paid hours these days, but feel like revisiting this for a bit over the course.\n",
     "\n",
-    "# Exploratory data\n",
+    "# Getting acquainted with data\n",
     "\n",
-    "Arbitrarily, I downloaded the data for the Namoi catchment from the [Australian Groundwater Explorer](http://www.bom.gov.au/water/groundwater/explorer/map.shtml). While I am not totally new to the domain, I genuinely do need to explore this data from scratch. This will probably be at least the rest of this post.  "
+    "Arbitrarily, I downloaded data for the [Namoi catchment](https://www.awe.gov.au/water/cewo/catchment/namoi) from the [Australian Groundwater Explorer](http://www.bom.gov.au/water/groundwater/explorer/map.shtml). While I am not totally new to the domain, I genuinely do need to explore this data from scratch. This will probably be at least the rest of this post.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e473446a-7161-45df-b6e7-a66e45d902f4",
+   "execution_count": 1,
+   "id": "bab780c4-075b-4bd8-8882-677a5fe59c30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "8423894b-dd5d-46de-9ec4-d963d9c04e39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1eed6012-60a9-4a90-913f-dc8828b404a5",
    "metadata": {},
    "outputs": [],
@@ -102,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2597616c-9184-4eb6-9298-a05621e18818",
    "metadata": {},
    "outputs": [],
@@ -120,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2f30d625-efe5-4b20-8fd7-4fd301de5348",
    "metadata": {},
    "outputs": [
@@ -280,7 +263,7 @@
        "4        1     8666179  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "68d8267b-fe72-471d-a43b-f74624c7122d",
    "metadata": {},
    "outputs": [
@@ -309,7 +292,7 @@
        "144518"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7794e5be-e964-42ad-a51b-88afd3aa3c3d",
    "metadata": {},
    "outputs": [],
@@ -338,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b61935fc-3ac0-4c26-98ed-00f9b1dd32e3",
    "metadata": {},
    "outputs": [],
@@ -358,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "924658cb-908a-4c04-a089-abdfc613dad3",
    "metadata": {},
    "outputs": [],
@@ -369,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1e8b4287-eed1-4155-bd43-53f007330bd5",
    "metadata": {},
    "outputs": [
@@ -379,7 +362,7 @@
        "<AxesSubplot:xlabel='token'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -418,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ed9845e0-dd92-435c-b3df-9117254ca549",
    "metadata": {},
    "outputs": [],
@@ -429,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "271591ce-63cb-405f-95f8-27dac9cf0771",
    "metadata": {},
    "outputs": [
@@ -439,7 +422,7 @@
        "<AxesSubplot:xlabel='token'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "17b32a3b-a3a3-4453-a86d-bb929b37d53a",
    "metadata": {},
    "outputs": [],
@@ -496,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "62c90747-950f-4555-b564-5f5ec954d596",
    "metadata": {},
    "outputs": [],
@@ -506,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b7e49c79-7d07-4f23-865a-b1a5f721f716",
    "metadata": {},
    "outputs": [
@@ -566,7 +549,7 @@
        "Name: Description, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "0fd2e90b-6db5-418b-8585-754fb97f1a09",
    "metadata": {},
    "outputs": [
@@ -607,7 +590,7 @@
        "Name: Description, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "43c2f4b9-c77b-4d91-8f44-ad2abc2e517e",
    "metadata": {},
    "outputs": [],
@@ -641,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "2341f6d3-3216-4223-9428-41aad2ff098e",
    "metadata": {},
    "outputs": [
@@ -701,7 +684,7 @@
        "Name: Description, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "78141fec-5156-40d6-8884-eca1073a0be0",
    "metadata": {},
    "outputs": [
@@ -790,7 +773,7 @@
        "Name: Description, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,12 +789,18 @@
    "source": [
     "Well, it does not require a fully trained geologist to think there should be obvious primary lithology codes for many of these, so why is there \"None\" for these descriptions?\n",
     "\n",
-    "Not shown in the 50-odd sample above are descriptions which should indeed be unclassified (e.g. \"no strata description\")"
+    "Not shown in the 50-odd sample above are descriptions which should indeed be unclassified (e.g. \"no strata description\")\n",
+    "\n",
+    "This is also an occasion to note the less obvious information and complications in descriptive logs, compared to earlier categories:\n",
+    "  \n",
+    "* CALY as a typo for CLAY\n",
+    "* Slang terms and acronyms, e.g. \"W.B.\" perhaps for \"Weathered, broken\"  \n",
+    "* Quantitative and qualitative attributes such as SAND; 60%, SILTY, FINE 10%, MEDIUM 20% & COARSE, which may be valuable for some types of classification \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "9f4a5021-e12f-46c9-a38b-6da34011593f",
    "metadata": {},
    "outputs": [
@@ -871,7 +860,7 @@
        "Name: Description, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ca7b4d1a-f513-4f38-b12f-84aaf9d445a6",
    "metadata": {},
    "outputs": [
@@ -950,7 +939,7 @@
        "Name: Description, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +953,7 @@
    "id": "188b8d70-be95-4e21-894b-b1c15a43368c",
    "metadata": {},
    "source": [
-    "Interesting. There is a clear pattern. I know from my prior exposure that \"Clayey sands\" and \"sandy clays\" are not that uncommon (and matter a great deal for geo-hydrology)."
+    "Interesting. There is a clear pattern. I know from my prior exposure that \"Clayey sands\" and \"sandy clays\" are not that uncommon (and gradations of mixes of sand and clay matter a great deal to estimate hydraulic conductivity)."
    ]
   },
   {
@@ -980,7 +969,9 @@
    "id": "019f0de7-4dd8-4f61-b2b9-6cbe1207b35c",
    "metadata": {},
    "source": [
-    "This was the initial EDA. Next I'll  probably train a classifier on the major lithology code (or a subset thereof). I am keen to explore multi-label classification, but will ahve to decide whether to populate the secondary lithology code using regexp classification, or find a fully labeled dataset."
+    "This was the initial EDA. Next I'll  probably train a classifier on the major lithology code (or a subset thereof). I am keen to explore multi-label classification, but will have to decide whether to populate the secondary lithology code using regexp classification, or switch to a fully labelled dataset at some point.\n",
+    "\n",
+    "This first post illustrated the need to have a look at data. This data was already collated and curated, and I have no doubt many people went through a lot of work to get there. But this may not be a fully labelled dataset amenable to be used for training a classifier. At least, not without further data preparation."
    ]
   },
   {
