FIX doc and likely bug in classification training with weights: sorted versus not sorted labels

--- a/_notebooks/2022-06-13-lithology-classification-hugging-face-2.ipynb
+++ b/_notebooks/2022-06-13-lithology-classification-hugging-face-2.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "# Lithology classification using Hugging Face, part 2\n",
+    "> Exploring the use of NLP to exploit geologic information. Trying to classify lithologies.\n",
     "\n",
     "- toc: true\n",
     "- badges: true\n",
@@ -1206,22 +1207,22 @@
     {
      "data": {
       "text/plain": [
-       "BSLT     7894\n",
-       "CGLM     1233\n",
        "CLAY    43526\n",
-       "COAL     1040\n",
-       "GRNT     1852\n",
        "GRVL    15824\n",
-       "MDSN     1207\n",
-       "ROCK     2549\n",
        "SAND    15317\n",
-       "SDCY     1643\n",
-       "SDSN     9199\n",
        "SHLE    10158\n",
-       "SLSN     1443\n",
-       "SOIL     4347\n",
+       "SDSN     9199\n",
+       "BSLT     7894\n",
        "TPSL     5300\n",
+       "SOIL     4347\n",
+       "ROCK     2549\n",
+       "GRNT     1852\n",
+       "SDCY     1643\n",
+       "SLSN     1443\n",
+       "CGLM     1233\n",
+       "MDSN     1207\n",
        "UNKN     1125\n",
+       "COAL     1040\n",
        "Name: MajorLithCode, dtype: int64"
       ]
      },
@@ -1231,7 +1232,7 @@
     }
    ],
    "source": [
-    "sorted_counts = litho_logs_kept[MAJOR_CODE].value_counts().sort_index()\n",
+    "sorted_counts = litho_logs_kept[MAJOR_CODE].value_counts()\n",
     "sorted_counts"
    ]
   },
@@ -1244,22 +1245,22 @@
     {
      "data": {
       "text/plain": [
-       "BSLT    0.063838\n",
-       "CGLM    0.009971\n",
        "CLAY    0.351990\n",
-       "COAL    0.008410\n",
-       "GRNT    0.014977\n",
        "GRVL    0.127967\n",
-       "MDSN    0.009761\n",
-       "ROCK    0.020613\n",
        "SAND    0.123867\n",
-       "SDCY    0.013287\n",
-       "SDSN    0.074391\n",
        "SHLE    0.082147\n",
-       "SLSN    0.011669\n",
-       "SOIL    0.035154\n",
+       "SDSN    0.074391\n",
+       "BSLT    0.063838\n",
        "TPSL    0.042860\n",
+       "SOIL    0.035154\n",
+       "ROCK    0.020613\n",
+       "GRNT    0.014977\n",
+       "SDCY    0.013287\n",
+       "SLSN    0.011669\n",
+       "CGLM    0.009971\n",
+       "MDSN    0.009761\n",
        "UNKN    0.009098\n",
+       "COAL    0.008410\n",
        "Name: MajorLithCode, dtype: float64"
       ]
      },
@@ -1281,10 +1282,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.93616213, 0.99002887, 0.64801022, 0.99158964, 0.98502309,\n",
-       "       0.87203312, 0.99023913, 0.97938653, 0.87613317, 0.98671325,\n",
-       "       0.92560874, 0.91785342, 0.98833062, 0.96484631, 0.95713951,\n",
-       "       0.99090225])"
+       "array([0.64801022, 0.87203312, 0.87613317, 0.91785342, 0.92560874,\n",
+       "       0.93616213, 0.95713951, 0.96484631, 0.97938653, 0.98502309,\n",
+       "       0.98671325, 0.98833062, 0.99002887, 0.99023913, 0.99090225,\n",
+       "       0.99158964])"
       ]
      },
      "execution_count": 14,
@@ -1363,8 +1364,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0.9362, 0.9900, 0.6480, 0.9916, 0.9850, 0.8720, 0.9902, 0.9794, 0.8761,\n",
-       "        0.9867, 0.9256, 0.9179, 0.9883, 0.9648, 0.9571, 0.9909],\n",
+       "tensor([0.6480, 0.8720, 0.8761, 0.9179, 0.9256, 0.9362, 0.9571, 0.9648, 0.9794,\n",
+       "        0.9850, 0.9867, 0.9883, 0.9900, 0.9902, 0.9909, 0.9916],\n",
        "       device='cuda:0')"
       ]
      },
@@ -1682,8 +1683,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parameter 'function'=<function tok_func at 0x7f8958312820> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 123657/123657 [00:25<00:00, 4925.29ex/s]\n"
+      "Parameter 'function'=<function tok_func at 0x7f59b47544c0> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 123657/123657 [00:26<00:00, 4742.25ex/s]\n"
      ]
     }
    ],
