Fix typos to _notebooks/2022-07-03-lithology-classification-hugging-face-3.ipynb

--- a/_notebooks/2022-07-03-lithology-classification-hugging-face-3.ipynb
+++ b/_notebooks/2022-07-03-lithology-classification-hugging-face-3.ipynb
@@ -1837,15 +1837,17 @@
   {
    "cell_type": "markdown",
    "id": "46b48874-2202-4f79-92e2-098d4d082873",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "\n",
     "## Observations\n",
     "\n",
-    "The error rate is rather slow for a first trial, though admittedly we know that many descriptions are fairly unambiguous. If we comment on the failed predictions:\n",
+    "The error rate is rather low for a first trial, though admittedly we know that many descriptions are fairly unambiguous. If we examine the failed predictions, we can make a few observations:\n",
     "\n",
-    "* There are many `none` descriptions that are picked up as CLAY, but given that the true labels are not necessarily `UNKN` for these, one cannot complain too much about the model.\n",
-    "* The model picks up several `sandy clay` as `SDCY`, which is a priori more suited than the true labels, at least without other information context.\n",
+    "* There are many `none` descriptions that are picked up as CLAY, but given that the true labels are not necessarily `UNKN` for these, one cannot complain too much about the model. The fact that some true labels are set to `CLAY` for these hints at the use of contextual information, perhaps nearby lithology log entries being classified as `CLAY`.\n",
+    "* The model picks up several `sandy clay` as `SDCY`, which is a priori more suited than the true labels, at least without other information context explaining why the \"true\" classification ends up being another category such as `CLAY`\n",
     "* Typographical errors such as `ssandstone` are throwing the model off, which is extected. A production pipeline would need to have an orthographic correction step.\n",
     "* grammatically unusual expressions such as `clay sandy` and `clayey/gravel brown` are also a challenge for the model.\n",
     "* More nuanced descriptions such as `light grey medium to coarse sandy gravel - 30%, and gravelly clay - 70%. gravel mainly basalt and jasper` where a human reads that the major class is clay, not gravel, or `broken rock` is more akin to gravel than rock.\n",
@@ -1960,7 +1962,7 @@
     "\n",
     "Despite quite a few arbitrary shortcuts in the overall pipeline, we have a working template to fine-tune a pre-trained classification model to classify primary lithologies. \n",
     "\n",
-    "I'll probably have to pause on this work for a few weeks, though perhaps a teaser Gradio app on Hugging Face spaces is affordable. "
+    "I'll probably have to pause on this work for a few weeks, though perhaps a teaser Gradio app on Hugging Face spaces in the same vein as [this one](https://huggingface.co/spaces/j-m/formality_tagging) is diable with relatively little work. "
    ]
   },
   {
