--- a/posts/2022-08-09-python-profiling-interop.ipynb
+++ b/posts/2022-08-09-python-profiling-interop.ipynb
@@ -31,6 +31,8 @@
    "id": "proof-roller",
    "metadata": {},
    "source": [
+    "![Profiling python code with cProfile](images/cProfile_20220809.png \"Profiling python code with cProfile\")\n",
+    "\n",
     "# Background\n",
     "\n",
     "A [software stack for streamflow forecasting](https://github.com/csiro-hydroinformatics/streamflow-forecasting-tools-onboard/) consists of a C++ modelling engine, accessible via a C API from various interactive language bindings including python. I have not done some benchmark performance profiling for a while on this stack. I expect the C++ core to be pretty much as good as it was 8 years ago, but as I bed down some of the python bindings, I notice some lags when interacting. This is not a surprise, and I expect these to be either in python code, or perhaps at the boundary with the C API. This intuition needs to be confirmed by objective measurements. \n",
