--- a/posts/20221007-nbdev-windows/index.qmd
+++ b/posts/20221007-nbdev-windows/index.qmd
@@ -6,7 +6,7 @@ author:
     url: {}
 date: "2022-10-07"
 categories: ["Python", "Notebook", "IDE"]
-image: screenshot.png
+image: nbdev_visual.png
 format: 
   html:
     toc: true
